# kitu-logic-processor

./: .gitignore  AGENT.md  Cargo.toml  PRODUCTION_STRATEGY.md  PROJECT_TODO.md  README.md  README_JP.md  dev-workflow.md  justfile
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: work-item.md
.github/workflows/: rust-ci.yml
apps/: README.md
apps/demo-game/: Cargo.toml  README.md  docker-compose.yml  kitu-app-actions.toml
apps/demo-game/scenarios/admin-world-basic/: expected.json  scenario.json
apps/demo-game/src/: lib.rs
apps/demo-game/tests/: scenarios.rs
crates/kitu-app-actions/: Cargo.toml  README.md
crates/kitu-app-actions/src/: lib.rs
crates/kitu-core/: Cargo.toml  README.md
crates/kitu-core/src/: lib.rs
crates/kitu-data-sqlite/: Cargo.toml  README.md
crates/kitu-data-sqlite/src/: lib.rs
crates/kitu-data-tmd/: Cargo.toml  README.md
crates/kitu-data-tmd/src/: lib.rs
crates/kitu-ecs/: Cargo.toml  README.md
crates/kitu-ecs/src/: lib.rs
crates/kitu-osc-ir/: Cargo.toml  README.md
crates/kitu-osc-ir-wasm/: Cargo.toml  README.md
crates/kitu-osc-ir-wasm/src/: lib.rs
crates/kitu-osc-ir/src/: lib.rs
crates/kitu-runtime/: Cargo.toml  README.md
crates/kitu-runtime/src/: lib.rs
crates/kitu-runtime/tests/: app_action_world_flow.rs  player_move_slice.rs
crates/kitu-scripting-rhai/: Cargo.toml  README.md
crates/kitu-scripting-rhai/src/: lib.rs
crates/kitu-shell/: Cargo.toml  README.md
crates/kitu-shell/src/: lib.rs
crates/kitu-transport/: Cargo.toml  README.md
crates/kitu-transport/src/: lib.rs
crates/kitu-tsq1/: Cargo.toml  README.md
crates/kitu-tsq1/src/: lib.rs
crates/kitu-unity-ffi/: Cargo.toml  README.md
crates/kitu-unity-ffi/src/: lib.rs
crates/kitu-web-admin-backend/: Cargo.toml  README.md
crates/kitu-web-admin-backend/src/: lib.rs
doc/: architecture.md  architecture_JP.md  atchitecture-JP.md  atchitecture_JP.md  crates-overview.md  detailed-flows  detailed-flows-JP.md  detailed-flows.md  detailed-flows_JP.md  dev-workflow.md  publish-readiness.md  rust-doc-templates.md
doc/specs/: README.md  integration-replay-framework.md  kitu-envelope-protocol.md  osc-addressing.md  runtime-execution-contract.md  runtime-execution.md  vertical-slice-player-move.md  webtransport-gateway.md
kitu-integration-runner/: README.md
kitu-integration-runner/fixtures/: README.md
kitu-integration-runner/reports/: README.md
kitu-integration-runner/scenarios/: README.md
kitu-integration-runner/scenarios/smoke/player-move-basic/: expected.json  notes.md  scenario.json
kitu-integration-runner/unity-app/: README.md
kitu-integration-runner/unity-demo-game/: .gitattributes  .gitignore  README.md
kitu-integration-runner/unity-demo-game/kitu-unity-demo-game/Assets/Kitu/Editor/: KituNetworkDemoSceneBuilder.cs
kitu-integration-runner/unity-demo-game/kitu-unity-demo-game/Assets/Kitu/Runtime/: KituNetworkPlayerController.cs  KituNetworkRuntimeClient.cs  KituOscJson.cs  KituWorldObjectPresenter.cs
kitu-integration-runner/unity-demo-game/kitu-unity-demo-game/Assets/Scenes/: KituNetworkDemo.unity
kitu-integration-runner/unity-demo-game/kitu-unity-demo-game/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
kitu-integration-runner/unity-demo-game/kitu-unity-demo-game/ProjectSettings/: ProjectSettings.asset
specs/: README.md  integration-replay-framework.md  osc-addressing.md  runtime-execution-contract.md  runtime-execution.md  transport-envelope.md  vertical-slice-player-move.md
tools/: README.md
tools/kitu-cli/: Cargo.toml
tools/kitu-cli/src/: main.rs
tools/kitu-replay-runner/: Cargo.toml
tools/kitu-replay-runner/src/: main.rs
tools/kitu-web-admin/: README.md  docker-compose.yml
tools/kitu-web-admin/backend/: Cargo.toml
tools/kitu-web-admin/backend/src/: main.rs
tools/kitu-web-admin/frontend/: .gitignore  Dockerfile  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  vite.config.ts
tools/kitu-web-admin/frontend/src/: app.css
tools/kitu-web-admin/frontend/src/lib/: admin-client.ts  kep.ts  osc-ir.ts  types.ts
tools/kitu-web-admin/frontend/src/lib/components/: ConnectionBadge.svelte  TransportStatus.svelte  WorldCanvas.svelte
tools/kitu-web-admin/frontend/src/lib/components/ui/: Button.svelte  Field.svelte  Input.svelte  Panel.svelte
tools/kitu-web-admin/frontend/src/routes/: +layout.svelte  +page.svelte
tools/kitu-web-admin/frontend/src/routes/(kitu-general)/logs/: +page.svelte
tools/kitu-web-admin/frontend/src/routes/(project)/app-actions/: +page.svelte
tools/kitu-web-admin/frontend/src/routes/(project)/game-parameters/: +page.svelte
tools/kitu-web-admin/frontend/src/routes/(project)/level-designer/: +page.svelte
tools/kitu-web-admin/frontend/src/routes/(project)/story-sequencing/: +page.svelte
tools/kitu-web-admin/frontend/src/routes/world/: +page.svelte
tools/kitu-webtransport-gateway/: Cargo.toml  Dockerfile
tools/kitu-webtransport-gateway/scripts/: check-dev-cert-in-docker.sh  check-in-docker.sh  generate-dev-cert-in-docker.sh  integration-in-docker.sh  smoke-in-docker.sh
tools/kitu-webtransport-gateway/src/: main.rs
unity/: README.md
unity-packages/: README.md
