[package]
name = "kitu-data-sqlite"
version = "0.1.0"
edition = "2021"
publish = false
description = "SQLite-backed data utilities and schema helpers for Kitu tooling."
license = "MIT"
repository = "https://github.com/Nagitch/kitu-logic-processor"
readme = "README.md"
keywords = ["kitu", "sqlite", "data"]
categories = ["database", "game-development"]
include = ["src/**", "Cargo.toml", "README.md", "LICENSE*"]

[dependencies]
kitu-core = { path = "../kitu-core" }
