[package]
name = "kitu-ecs"
version = "0.1.0"
edition = "2021"
publish = false
description = "Lightweight ECS world and scheduler used by the Kitu runtime loop."
license = "MIT"
repository = "https://github.com/Nagitch/kitu-logic-processor"
readme = "README.md"
keywords = ["kitu", "ecs", "runtime"]
categories = ["game-development", "data-structures"]
include = ["src/**", "Cargo.toml", "README.md", "LICENSE*"]

[dependencies]
kitu-core = { path = "../kitu-core" }
