[package]
name = "kitu-osc-ir-wasm"
edition.workspace = true
version.workspace = true
authors.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
kitu-osc-ir = { path = "../kitu-osc-ir" }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "=0.2.95"

[dev-dependencies]
serde_json = "1"
