[package]
name = "kitu-runtime"
version = "0.1.0"
edition = "2021"
publish = false
description = "Tick-based orchestrator that wires ECS, transports, and scripting layers."
license = "MIT"
repository = "https://github.com/Nagitch/kitu-logic-processor"
readme = "README.md"
keywords = ["kitu", "runtime", "ecs"]
categories = ["game-development"]
include = ["src/**", "Cargo.toml", "README.md", "LICENSE*"]

[dependencies]
kitu-core = { path = "../kitu-core" }
kitu-ecs = { path = "../kitu-ecs" }
kitu-transport = { path = "../kitu-transport" }
kitu-osc-ir = { path = "../kitu-osc-ir" }
