[package]
name = "kitu-shell"
version = "0.1.0"
edition = "2021"
publish = false
description = "CLI shell primitives for driving and inspecting the Kitu runtime."
license = "MIT"
repository = "https://github.com/Nagitch/kitu-logic-processor"
readme = "README.md"
keywords = ["kitu", "cli", "runtime"]
categories = ["command-line-utilities", "game-development"]
include = ["src/**", "Cargo.toml", "README.md", "LICENSE*"]

[dependencies]
kitu-core = { path = "../kitu-core" }
