[package]
name = "kitu-unity-ffi"
version = "0.1.0"
edition = "2021"
publish = false
description = "C ABI bindings that expose the Kitu runtime to Unity hosts."
license = "MIT"
repository = "https://github.com/Nagitch/kitu-logic-processor"
readme = "README.md"
keywords = ["kitu", "unity", "ffi"]
categories = ["api-bindings", "game-development"]
include = ["src/**", "Cargo.toml", "README.md", "LICENSE*"]

[dependencies]
kitu-core = { path = "../kitu-core" }
kitu-runtime = { path = "../kitu-runtime" }
kitu-transport = { path = "../kitu-transport" }
