[package]
name = "kitu-replay-runner"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
kitu-osc-ir = { path = "../../crates/kitu-osc-ir" }
kitu-runtime = { path = "../../crates/kitu-runtime" }
kitu-transport = { path = "../../crates/kitu-transport" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
