[package]
name = "kitu-webtransport-gateway"
version = "0.1.0"
edition = "2021"
publish = false
description = "Experimental WebTransport gateway for Kitu KEP envelopes."
default-run = "kitu-webtransport-gateway"

[workspace]

[[bin]]
name = "kitu-webtransport-gateway"
path = "src/main.rs"

[[bin]]
name = "kitu-webtransport-gateway-smoke-client"
path = "src/bin/smoke_client.rs"

[[bin]]
name = "kitu-webtransport-gateway-integration-client"
path = "src/bin/integration_client.rs"

[dependencies]
anyhow = "1"
futures-util = "0.3"
kitu-osc-ir = { path = "../../crates/kitu-osc-ir" }
kitu-transport = { path = "../../crates/kitu-transport" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.27"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wtransport = "0.7"
