[package]
name = "kitu-web-admin-demo-backend"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
axum = { version = "0.7", features = ["ws"] }
kitu-osc-ir = { path = "../../../crates/kitu-osc-ir" }
kitu-runtime = { path = "../../../crates/kitu-runtime" }
kitu-transport = { path = "../../../crates/kitu-transport" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
